docker-k8s-istio-template/istio-service-destinationrule.yaml

# 定义目标规则
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: istio-service-user
spec:
  host: istio-service-user.default.svc.cluster.local
  subsets:
  - name: v14
    labels:
      version: v14
