docker-k8s-istio-template/istio-service-virtualservice-default.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: istio-service-user
spec:
  hosts:
  - istio-service-user.default.svc.cluster.local
  http:
  - route:
    - destination:
        host: istio-service-user.default.svc.cluster.local
        subset: proVersion
