docker-k8s-istio-template/istio-service-virtualservice-jsq.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: istio-service-user
spec:
  hosts:
  - istio-service-user.default.svc.cluster.local
  http:
  - match:
    - headers:
        lab:
          exact: assion
    route:
    - destination:
        host: istio-service-user.default.svc.cluster.local
        subset: jsqVersion
  - route:
    - destination:
        host: istio-service-user.default.svc.cluster.local
        subset: currentVersion
